# peak-analyzer

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_ja.md  README.md  README_japanese.md  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/algorithms/: algorithm.md  algorithm_ja.md  implementation_details.md  implementation_details_ja.md
docs/api/: api_reference.md  api_reference_ja.md
docs/architecture/: architecture.md  architecture_ja.md
examples/: advanced_usage.py  basic_usage.py
peak_analyzer/: __init__.py  models.py
peak_analyzer/api/: __init__.py  parameter_validation.py  peak_detector.py  result_dataframe.py
peak_analyzer/boundary/: __init__.py  boundary_conditions.py  edge_detection.py
peak_analyzer/connectivity/: __init__.py  connectivity_types.py  distance_metrics.py  neighbor_generator.py  path_finder.py
peak_analyzer/coordinate_system/: __init__.py  coordinate_mapping.py  grid_manager.py  spatial_indexing.py
peak_analyzer/core/: __init__.py  data_analyzer.py  plateau_detector.py  prominence_calculator.py  strategy_manager.py  union_find.py  virtual_peak_handler.py
peak_analyzer/data/: __init__.py  validation.py
peak_analyzer/features/: __init__.py  base_calculator.py  distance_calculator.py  geometric_calculator.py  lazy_feature_manager.py  morphological_calculator.py  topographic_calculator.py
peak_analyzer/models/: __init__.py  data_analysis.py  peaks.py
peak_analyzer/strategies/: __init__.py  base_strategy.py  hybrid_strategy.py  plateau_first_strategy.py  strategy_factory.py  (+1 more)
tests/: __init__.py
(+3 files in other folders)
